--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
-.App {
+/* .App {
+    display: flex;
+    justify-content: center;
+    align-items: center;
   text-align: center;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 .App-logo {
@@ -35,4 +39,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
